updated inline documentation

--- a/ci.yml
+++ b/ci.yml
@@ -1,14 +1,14 @@
 name: Build & Deploy Docker Image
 
 on:
-  # Trigger the workflow on push or pull request,
-  # but only for the branch
+  # Trigger the workflow on push or pull, but only for the branch we want
   push:
     branches:
       - master
-# Set env variables for github actions, other
+# Set env variables for github actions
 env:
-    REPO: 'szolll/docker_nginx_reverse_proxy'
+    REG: 'YOUR_DOCKER_REPOSITORY_HERE'
+    # The version you want to pull/push
     VERSION: 'latest'
 
 jobs:
@@ -17,13 +17,15 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image...........
-      run: docker build . --file Dockerfile --no-cache --tag "${{ env.REPO }}":latest
-    
+      run: docker build . --file Dockerfile --no-cache --tag "${{ env.REG }}:${{ env.VERSION }}"
+    # Scan our project with Anchore
     - uses: anchore/scan-action@master
       with:
-        image-reference: "${{ env.REPO  }}:latest"
+        image-reference: "${{ env.REG  }}:${{ env.VERSION }}"
         dockerfile-path: "./Dockerfile"
-    #    custom-policy-path: .anchore/anchore_default_bundle.json
+    # Example for using our own Anchore scan policy
+    #   custom-policy-path: .anchore/anchore_default_bundle.json
+    # Do we want to fail the build if the scan shows critical issues with out project?
         fail-build: true
     # Scan anchore output
     - name: anchore inline scan JSON results........
@@ -32,21 +34,21 @@ jobs:
     - name: Publish to docker registry
       uses: docker/build-push-action@v1
       with:
+      # Create github secrets named DOCKER_USERNAME and DOCKER_PASSWORD and provide the docker registry credentials 
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-        repository: ${{ env.REPO  }}
-        tags: latest
-    # On failures lets sms 
+        repository: ${{ env.REG  }}
+        tags: ${{ env.VERSION }}
+    # On failures lets SMS someone with our TWILIO number, create github secrets TWILIO_PHONE_NUMBER, MY_PHONE_NUMBER, TWILIO_ACCOUNT_SID, TWILIO_API_KEY, TWILIO_API_SECRET 
     - name: 'Sending SMS Notification on failures'
       if: failure()
       uses: twilio-labs/actions-sms@v1
       with:
          fromPhoneNumber: ${{ secrets.TWILIO_PHONE_NUMBER }}
          toPhoneNumber: ${{ secrets.MY_PHONE_NUMBER }}
-         message: "Build failure for ${{ env.REPO }} - NOK"
+         message: "Build failure for ${{ env.REG }} - NOK"
       env:
         TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
         TWILIO_API_KEY: ${{ secrets.TWILIO_API_KEY }}
         TWILIO_API_SECRET: ${{ secrets.TWILIO_API_SECRET }}
-
 # end
