--- a/ci.yml
+++ b/ci.yml
@@ -1,7 +1,7 @@
 name: Build & Deploy Docker Image
 
-on:
-  # Trigger the workflow on push or pull, but only for the branch we want
+on: [push, pull_request] 
+# Trigger the workflow on push or pull, but only for the branch we want
   push:
     branches:
       - master
