--- a/ci.yml
+++ b/ci.yml
@@ -10,7 +10,7 @@ env:
     REG: 'YOUR_DOCKER_REPOSITORY_HERE'
     # The version you want to pull/push
     VERSION: 'latest'
-
+# Jobs
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,6 +30,13 @@ jobs:
     # Scan anchore output
     - name: anchore inline scan JSON results........
       run: for j in `ls ./anchore-reports/*.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
+    # Super-Linter. Linting tool by github perfect for our actions
+    - name: Super-Linter
+      uses: github/super-linter@latest#v3.2.0
+      env:
+        # NOTE: When set to false, only new or edited files will be parsed for validation
+        VALIDATE_ALL_CODEBASE: false
+        DEFAULT_BRANCH: master    
     # Publish
     - name: Publish to docker registry
       uses: docker/build-push-action@v1
