--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
       - master
 # Set env variables for github actions
 env:
-    REG: 'YOUR_DOCKER_REPOSITORY_HERE'
+    REG: 'funkyB'
     # The version you want to pull/push
     VERSION: 'latest'
 # Jobs
@@ -15,11 +15,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Build the Docker image...........
       run: docker build . --file Dockerfile --no-cache --tag "${{ env.REG }}:${{ env.VERSION }}"
     # Scan our project with Anchore
-    - uses: anchore/scan-action@master
+    - uses: anchore/scan-action@v3
       with:
         image-reference: "${{ env.REG  }}:${{ env.VERSION }}"
         dockerfile-path: "./Dockerfile"
@@ -32,7 +32,7 @@ jobs:
       run: for j in `ls ./anchore-reports/*.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
     # Super-Linter. Linting tool by github perfect for our actions
     - name: Super-Linter
-      uses: github/super-linter@latest#v3.2.0
+      uses: github/super-linter@latest
       env:
         # NOTE: When set to false, only new or edited files will be parsed for validation
         VALIDATE_ALL_CODEBASE: false
