--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@main
     - name: Build the Docker image...........
       run: docker build . --file Dockerfile --no-cache --tag "${{ env.REG }}:${{ env.VERSION }}"
     # Scan our project with Anchore
@@ -49,7 +49,7 @@ jobs:
     # On failures lets SMS someone with our TWILIO number, create github secrets TWILIO_PHONE_NUMBER, MY_PHONE_NUMBER, TWILIO_ACCOUNT_SID, TWILIO_API_KEY, TWILIO_API_SECRET 
     - name: 'Sending SMS Notification on failures'
       if: failure()
-      uses: twilio-labs/actions-sms@v1
+      uses: twilio-labs/actions-sms@main
       with:
          fromPhoneNumber: ${{ secrets.TWILIO_PHONE_NUMBER }}
          toPhoneNumber: ${{ secrets.MY_PHONE_NUMBER }}
